2002-01-04  Jeffrey Stedfast  <fejj@ximian.com>

	* memchunk.c (memchunk_clean): Oops, when tree_search() returns 0
	we want to prune it, not the other way around :-)

2002-01-02  Jeffrey Stedfast  <fejj@ximian.com>

	* memchunk.c (memchunk_clean): Fixed a logic mistake that
	prevented pruning of the head node.

2002-01-01  Charles Kerr <charles@rebelbase.com>

	* gmime-message (g_mime_message_get_body): added g_return_val_if_fail
	checks in the entry point.

2001-12-31  Jeffrey Stedfast  <fejj@ximian.com>

	* internet-address.c (decode_address): Optimized group parsing.

	* doc/*: Updated.

2001-12-31  Jeffrey Stedfast  <fejj@ximian.com>

	* strlib.c (strncasecmp): Convert the chars to lowercase before
	diffing.

2001-12-30  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version number to 0.7.5 since the
	internet-address API and bits of the gmime-message API have
	changed.

	* internet-address.c (internet_address_new): Initialize the
	refcount to 1.
	(internet_address_destroy): This is now an internal function.
	(internet_address_ref): New function to ref an InternetAddress
	object.
	(internet_address_unref): New function to unref an InternetAddress
	object.
	(internet_address_set_group): Updated to use the new
	internet_address_list functions.
	(internet_address_add_member): Same.
	(internet_address_list_prepend): New function to manipulate a list
	of InternetAddress objects.
	(internet_address_list_append): Same.
	(internet_address_list_concat): Another new function.
	(internet_address_list_length): Again...
	(internet_address_list_destroy): Destroy a list of addresses.
	(internet_address_list_to_string): New utility function to write a
	list of addresses to a string.
	(internet_address_parse_string): Optimized slightly by not using
	GLists' generic append function and also updated to use
	InternetAddressList.

	* gmime-message.c (recipients_destroy): Updated to call
	internet_address_list_destroy.